--- a/YouthSongbook/YouthSongbook.csproj
+++ b/YouthSongbook/YouthSongbook.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\songs.json" />
+    <AndroidAsset Include="Assets\songsChords.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
