Working on adding a custom list adapter for more features

--- a/YouthSongbook/YouthSongbook.csproj
+++ b/YouthSongbook/YouthSongbook.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SongActivity.cs" />
+    <Compile Include="SongListAdapter.cs" />
     <Compile Include="SongNetwork.cs" />
     <Compile Include="UpdateActivity.cs" />
   </ItemGroup>
