--- a/YouthSongbook/YouthSongbook.csproj
+++ b/YouthSongbook/YouthSongbook.csproj
@@ -9,8 +9,8 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>YouthSongbook</RootNamespace>
-    <AssemblyName>YouthSongbook</AssemblyName>
+    <RootNamespace>HIHSongbook</RootNamespace>
+    <AssemblyName>HIHSongbook</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidApplication>true</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
@@ -71,13 +71,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="SongData.cs" />
     <Compile Include="MainActivity.cs" />
-    <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SongActivity.cs" />
     <Compile Include="SongListAdapter.cs" />
     <Compile Include="SongNetwork.cs" />
+    <Compile Include="SplashActivity.cs" />
     <Compile Include="UpdateActivity.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -112,6 +113,10 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\simple_list_item_CUST.xml" />
+    <AndroidResource Include="Resources\values\SplashTheme.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\drawable\hih_white.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
