--- a/YouthSongbook/Properties/AndroidManifest.xml
+++ b/YouthSongbook/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="HIHSongbook.HIHSongbook" android:versionCode="1" android:versionName="1.1" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="prod.pablok2.hihsongbook" android:versionCode="1" android:versionName="1.1" android:installLocation="auto">
 	<uses-sdk />
 	<application android:label="Hand In Hand Songbook" android:icon="@drawable/Icon"></application>
 	<uses-permission android:name="android.permission.INTERNET" />
